[package]
name = "backend"
version = "0.1.0"
authors = ["alwa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.21", features = ["macros"] }
warp = "0.2.3"
nalgebra = "0.21.0"
rayon = "1.3.0"
